# vhdsa-ref

./: .gitignore  PROJECT_STATEMENT.md  README.md  aes.c  aes.h  aesni.h  bavc.c  bavc.h  benchmark_test.sh  compat.c  compat.h  cpu.c  cpu.h  crypto_sign.c.in  crypto_sign.h.in  endian_compat.h  fields.c  fields.h  hash_shake.h  instances.c  instances.h  macros.h  meson.build  owf.c  owf.h  random_oracle.c  random_oracle.h  randomness.c  randomness.h  types.h  universal_hashing.c  universal_hashing.h  utils.c  utils.h  vhdsa.h  vhdsa_aes.c.in  vhdsa_aes.h  vhdsa_defines.h  vhdsa_impl.c  vhdsa_impl.h  (+4 more)
docs/: additional-files.md  api.md  build-steps.md  features.md  getting-started.md  installation.md  license.md  project-files.md  project-structure.md  related-links.md  test-steps.md
sha3/: KeccakHash.h  brg_endian.h  s390_cpacf.h
sha3/avx2/: KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h
sha3/opt64/: KeccakP-1600-opt64.c
sha3/plain32/: KeccakP-1600-inplace32BI.c
tests/: api_test.c
vhdsa_128f/: meson.build
vhdsa_128s/: meson.build
vhdsa_192f/: meson.build
vhdsa_192s/: meson.build
vhdsa_256f/: meson.build
vhdsa_256s/: meson.build
